EPBDS-5915 Update Java opts in OpenL demo
--HG--
branch : 5.15.x